# EPPA

./: .gitignore  CLAUDE.md  CMakeLists.txt  PedalZone.h  README.ko.md  README.md  devlog.md  get_session_name.cpp  get_session_name.h  get_track_list.cpp  get_track_list.h  host_ready_check.cpp  host_ready_check.h  main.cpp  ptsl_helpers.h  references.md  register_connection.cpp  register_connection.h  toggle_play_state.cpp  toggle_play_state.h
Config/: conanfile.txt
controller/: App.cpp  App.h  MidiInputHandler.cpp  MidiInputHandler.h  PlaybackController.cpp  PlaybackController.h
logs/: 20260406.md  20260409.md
model/: PedalInterpreter.cpp  PedalInterpreter.h
src/: App.cpp  App.h  AppConfig.h  main.cpp
src/controller/: ProToolsController.cpp  ProToolsController.h
src/midi/: MidiInputHandler.cpp  MidiInputHandler.h  MidiMessage.h
src/pedal/: PedalInterpreter.cpp  PedalInterpreter.h  PedalStateMachine.cpp  PedalStateMachine.h  PedalZone.h
voiceover/: Reader.cpp  Reader.h
